Closed
Bug 339898
Opened 20 years ago
Closed 19 years ago
Unresolved text symbol "PR_IntervalNow" -- 1st referenced by ../../../dist/lib/libxpcomglue.a(nsThreadUtils.o).
Categories
(Core :: XPCOM, defect)
Core
XPCOM
Tracking
()
RESOLVED
FIXED
People
(Reporter: g.fischer, Assigned: benjamin)
Details
Attachments
(1 file)
|
3.32 KB,
patch
|
timeless
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; IRIX64 IP27; en-US; rv:1.9a1) Gecko/R-A-C SeaMonkey/1.5a
Build Identifier:
irix 6.5.29, mipspro 7.4.x, current firefox checkout, head:
Unresolved text symbol "PR_IntervalNow" -- 1st referenced by ../../../dist/lib/libxpcomglue.a(nsThreadUtils.o).
Reproducible: Always
| Reporter | ||
Comment 1•20 years ago
|
||
maybe i should add a bit more:
this was the comp. line.
CC -I/usr/local/include -I/usr/nekoware/include -LANG:exceptions=OFF -woff 3262 -G 4 -n32 -Zf,_245 -DNDEBUG -DTRIMMED -mips4 -O3 -lfastm -lm -OPT:Olimit=0:roundoff=3:IEEE_arithmetic=3 -TARG:platform=IP27:proc=r12000 -o regxpcom regxpcom.o -lpthread -L/usr/local/lib -L/usr/nekoware/lib -n32 -L../../../dist/bin -L../../../dist/lib ../../../dist/lib/libxpcomglue.a -lsocket -ldl -lm
| Reporter | ||
Comment 2•19 years ago
|
||
i guess there's just a missing linker line.
which file would i have to add via -L/xxx ?
thanks
| Reporter | ||
Comment 3•19 years ago
|
||
sunbird-0.3.1 shows the error as well.
| Assignee | ||
Comment 4•19 years ago
|
||
This is real: the standalone glue should not depend on NSPR.
Status: UNCONFIRMED → NEW
Component: XPCOM Registry → XPCOM
Ever confirmed: true
OS: IRIX → All
Hardware: SGI → All
| Reporter | ||
Comment 5•19 years ago
|
||
(In reply to comment #4)
> This is real: the standalone glue should not depend on NSPR.
>
thanks, finally someone :-)
| Assignee | ||
Comment 6•19 years ago
|
||
| Reporter | ||
Comment 7•19 years ago
|
||
works!
although the finished build did not start :-/
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → WORKSFORME
Attachment #257680 -
Flags: review?(timeless) → review+
| Assignee | ||
Updated•19 years ago
|
Status: RESOLVED → REOPENED
Resolution: WORKSFORME → ---
| Assignee | ||
Comment 8•19 years ago
|
||
FIXED on trunk.
Status: REOPENED → RESOLVED
Closed: 19 years ago → 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•