Bug 339898 - Unresolved text symbol PR_InternalNow when using the standalone glue, r=timeless